# comhra

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt  mprocs.yaml  ollama_model_list.json
build-aux/: com.github.leo030303.Comhra.Devel.json  org.leoring.PhiChat.Devel.json
data/: com.github.leo030303.Comhra.desktop.in.in  com.github.leo030303.Comhra.gschema.xml.in  com.github.leo030303.Comhra.metainfo.xml.in.in  meson.build  org.leoring.PhiChat.desktop.in.in  org.leoring.PhiChat.gschema.xml.in  org.leoring.PhiChat.metainfo.xml.in.in
po/: POTFILES.in
src/: lib.rs  main.rs  phi_chat.rs  utils.rs  window.rs
src/conversations/: 9716e387-5cf4-496c-b958-f9a679154f64.json  b41b9322-309c-4bce-9d8a-f9724221eb76.json
src/models/: api_model.rs  candle_model.rs  mod.rs  ollama_model.rs
src/resources/: app.css
src/widgets/: chat_list_item.rs  main_header.rs  mod.rs  model_manager.rs  preferences.rs  prompt_entry.rs  sidebar.rs
