[package]
name = "gtk-phi-chat"
version = "0.1.0"
authors = ["Leo Ring <leoring03@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
async-channel = "2.2.1"
clone-macro = "0.1.0"
futures = "0.3.30"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_8"] }
ollama-rs = { version = "0.1.9", features = ["chat-history", "rustls", "stream", "tokio", "tokio-stream"] }
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tracing = "0.1.37"
tracing-subscriber = "0.3"
