[package]
name = "comhra"
version = "0.1.0"
authors = ["Leo Ring <leoring03@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_2"] }
arboard = "3.4.0"
async-channel = "2.2.1"
async-openai = "0.21.0"
async-trait = "0.1.80"
base64 = "0.22.1"
clone-macro = "0.1.0"
futures = "0.3.30"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_8"] }
ollama-rs = { version = "0.1.9", features = ["stream"] }
open = "5.1.3"
serde = "1.0.202"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tracing = "0.1.37"
tracing-subscriber = "0.3"
uuid = { version = "1.8.0", features = ["v4"] }
